1. remove cloudfoundry and heroku features 2. hide the creaditcard payment method 3. change the protocal from l2tpd to pptp